--- a/part-b-mean/server/.env
+++ b/part-b-mean/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI= mongodb+srv://elenhtzeliou1_db_user:elenh2003@cluster0.hcbhgbx.mongodb.net/elearning?retryWrites=true&w=majority
+MONGODB_URI=
 
 JWT_SECRET=some_long_random_string
 JWT_EXPIRES_IN=7d
